# mtp-schemas

./: constants.py  pyproject.toml  readme.md  schema_version.py  template_version.py  utils.py
.github/workflows/: jekyll-gh-pages.yml  static.yml
model_train_protocol_schemas/: __init__.py  bloom_version.py  model_version.py  schema_version.py  utils.py
model_train_protocol_schemas/examples/: bloom_1_2_0.json  bloom_1_2_1.json  bloom_1_3_0.json  model_1_0_0.json  template_1_2_0.json
model_train_protocol_schemas/schemas/: __init__.py
model_train_protocol_schemas/schemas/bloom/v0/: bloom_0_3_0.json
model_train_protocol_schemas/schemas/bloom/v1/: bloom_1_0_0.json
model_train_protocol_schemas/schemas/template/v0/: template_0_3_2.json
model_train_protocol_schemas/schemas/v1/: bloom_1_2_1.json  bloom_1_3_0.json  model_1_0_0.json
model_train_protocol_schemas/scripts/: generate_model_schema.py  generate_protocol_schema.py  generate_template_schema.py
model_train_protocol_schemas/structures/: model.py  protocol.py  template.py
model_train_protocol_schemas/v1/: bloom_1_2_0.json  template_1_2_0.json
schemas/bloom/v0/: bloom_0_3_1.json
schemas/bloom/v1/: bloom_1_1_0.json
schemas/template/v1/: template_1_0_0.json  template_1_1_0.json
schemas/v0/: bloom_0_3_2.json  bloom_0_3_3.json  bloom_0_4_0.json  template_0_3_0.json  template_0_3_1.json  template_0_3_3.json  template_0_4_0.json
schemas/v1/: bloom_1_2_1.json
scripts/: generate_protocol_schema.py  generate_template_schema.py  pydantic_to_schemas.py
structures/: protocol.py
