[project]
name = "mtp-schemas"
version = "1.0.0"
description = "Contains schemas supporting the model-train-protocol (mtp) library"
authors = [
    {name = "nikita-olechko",email = "nikita.olechko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
