[project]
name = "model-train-protocol-schemas"
version = "1.1.0"
description = "Contains schemas supporting the model-train-protocol (mtp) library"
authors = [
    {name = "nikita-olechko",email = "nikita@databiomes.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "packaging>=23.0"
]

[tool.poetry]
packages = [{ include = "model_train_protocol_schemas" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
