[project]
name = "model-train-protocol-schemas"
version = "2.0.1"
description = "Contains schemas supporting the model-train-protocol (mtp) library"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Databiomes Inc.", email = "dev@databiomes.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "packaging>=23.0"
]

[tool.poetry]
packages = [{ include = "model_train_protocol_schemas" }]
include = [
    { path = "model_train_protocol_schemas/examples/*.json", format = ["sdist", "wheel"] },
    { path = "model_train_protocol_schemas/schemas/**/*.json", format = ["sdist", "wheel"] }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
